--- a/.github/workflows/automate.yaml
+++ b/.github/workflows/automate.yaml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on:
       steps:
-        - uses: action/checkout@v2
+        - uses: actions/checkout@v2
         - name: Install Python 3
           - uses: actions/setup-python@v1
             with:
