--- a/.github/workflows/automate.yaml
+++ b/.github/workflows/automate.yaml
@@ -14,7 +14,7 @@ jobs:
             with:
               python-version: 3.9
         - name: Install dependencies
-            run:
+            run: |
               python -m pip install --upgrade pip
               pip install pytest
               pip install -r requirements.txt
