--- a/.github/workflows/automate.yaml
+++ b/.github/workflows/automate.yaml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build:
-    runs-on:
+    runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
         - name: Install Python 3
