--- a/.github/workflows/automate.yaml
+++ b/.github/workflows/automate.yaml
@@ -8,7 +8,7 @@ env:
   AWS_REGION: us-east-1
   ECR_REPOSITORY: flask_app
   ECS_SERVICE: flask_app_service
-  ECS_CLUSTER: prod_flask_app_clsuter
+  ECS_CLUSTER: prod_flask_app_cluster
   ECS_TASK_DEFINITION: task-definition.json
 
 jobs:
